# pegof

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  action.cc  action.h  alternation.cc  alternation.h  ast.cc  ast.h  ast_format.cc  ast_opt.cc  c_api.cc  c_api.h  capture.cc  capture.h  char_class.cc  char_class.h  character_class.cc  character_class.h  checker.cc  checker.h  clang.cmake  config.cc  config.h  directive.cc  directive.h  emscripten.sh  expand.cc  expand.h  format.c  format.sh  g++.cmake  grammar.cc  grammar.h  group.cc  (+41 more)
.github/workflows/: coverage.yml  cross-compile-for--netbsd-on-ubuntu.yml  cross-compile-for-android-on-ubuntu.yml  cross-compile-for-freebsd-on-ubuntu.yml  cross-compile-for-openbsd-on-ubuntu.yml  cross-compile-for-windows-on-ubuntu.yml  docker.yml  format.yml  netbsd.yml  pages.yml  testing-alpine.yml  testing-cygwin.yml  testing-macos.yml  testing-msys2.yml  testing.yml
ast/: action.cc  action.h  alternation.cc  alternation.h  capture.cc  capture.h  character_class.cc  character_class.h  code.cc  code.h  directive.cc  directive.h  expand.cc  expand.h  grammar.cc  grammar.h  group.cc  group.h  node.cc  node.h  reference.cc  reference.h  rule.cc  rule.h  sequence.cc  sequence.h  string.cc  string.h  stringnode.cc  stringnode.h  term.cc  term.h
benchmark/: run.sh
benchmark/grammars/: c.peg  json.peg  kotlin.peg
benchmark/inputs/: example.c
benchmark/scripts/: c.sh  calc.sh  json.sh  kotlin.sh
examples/: benchmark_c.sh  c.peg
src/: capi.cc  capi.h  checker.cc  checker.h  config.cc  config.h  log.cc  log.h  main.cc  optimizer.cc  optimizer.h  packcc_wrapper.c  packcc_wrapper.h  parser.cc  parser.h  utils.cc  utils.h  version.h
src/ast/: action.cc  action.h  alternation.cc  alternation.h  capture.cc  capture.h  character_class.cc  character_class.h  code.cc  code.h  directive.cc  directive.h  expand.cc  expand.h  grammar.cc  grammar.h  group.cc  group.h  marker.cc  marker.h  node.cc  node.h  position.cc  position.h  predicate.cc  predicate.h  reference.cc  reference.h  rule.cc  rule.h  sequence.cc  sequence.h  string.cc  string.h  term.cc  term.h
tests/: .gitignore  coverage.sh  run.sh  utils.sh
tests/CLI.d/: a.peg  a.peg.multi_inplace.expected  b.peg.expected  benchmark_conflict.conf  benchmark_noconflict.conf  config_comments.conf  debug_script_conflict.conf  debug_script_noconflict.conf  file.conf  graph.conf  graph.out  graph.peg  graph_optimized.conf  graph_optimized.out  indent_conflict.conf  indent_noconflict.conf  inline_limit_conflict.conf  inline_limit_noconflict.conf  inplace.conf  inplace_ast.conf  inplace_b.peg  inplace_debug.conf  inplace_output.conf  main.peg  multi.conf  multi.out  multi_inplace.conf  multi_mismatch.conf  multi_outputs.b.expected  multi_outputs.conf  output_type_conflict.conf  output_type_noconflict.conf  packcc_options.conf  packcc_options_conflict.conf  packcc_options_noconflict.conf  quotes_conflict.conf  quotes_noconflict.conf  skip_validation.conf  skip_validation.out  stdin.in  (+7 more)
tests/ast.d/: action.conf  action.out  action.peg  alternation.conf  alternation.out  alternation.peg  capture.conf  capture.out  capture.peg  character_class.conf  character_class.out  character_class.peg  code.conf  code.out  code.peg  directive.conf  directive.out  directive.peg  expand.conf  expand.out  expand.peg  group.conf  group.out  group.peg  import.peg  position.conf  position.out  position.peg  predicate.conf  predicate.out  predicate.peg  reference.conf  reference.out  reference.peg  sequence.conf  sequence.out  sequence.peg  string.conf  string.out  string.peg
tests/basic.d/: ast.conf  basic.ast  basic.peg  basic_optimized.ast  basic_optimized.peg  format.conf  format.out  optimized.conf  optimized.out  optimized_ast.conf
tests/char_classes.d/: char_classes.peg  concatenation.conf  concatenation.out  concatenation.peg  normalize.conf  normalize.out  single_char.conf  single_char.out  single_char.peg
tests/cli.d/: cli.bats
tests/comments.d/: alternation.conf  alternation.out  alternation.peg  capture.conf  capture.peg  code.conf  code.out  code.peg  comments.conf  comments.out  comments.peg  directive.conf  directive.out  directive.peg  grammar.conf  grammar.out  group.conf  group.peg  rule.conf  rule.out  rule.peg  term.conf  term.out  term.peg
tests/complex.d/: c.conf  c.in  c.out  c.peg  c_format.conf  c_format.out  c_optimize.out  c_run.out  calc.conf  calc.in  calc.out  calc.peg  calc_format.conf  calc_format.out  calc_optimize.out  calc_run.out  complex.bats  json.conf  json.in  json.out  json.peg  json_format.conf  json_format.out  json_optimize.out  json_run.out  kotlin.conf  kotlin.in  kotlin.out  kotlin.peg  kotlin_format.conf  kotlin_format.out  kotlin_optimize.conf  kotlin_optimize.out  kotlin_run.out
tests/ctags.d/: ctags.bats
tests/directives.d/: directives.peg  format.conf  format.out
tests/empty.d/: broken.conf  empty.c  empty.conf  empty.h
tests/empty_action.d/: actions.conf  actions.out  actions.peg  error_actions.conf  error_actions.out  error_actions.peg
tests/formatting.d/: action.conf  action.out  action.peg  alternation.conf  alternation.out  alternation.peg  character_class.conf  character_class.out  character_class.peg  directive.conf  directive.out  directive.peg  expand.conf  expand.peg  group.conf  group.out  group.peg  position.conf  position.out  position.peg  predicate.conf  predicate.out  predicate.peg  reference.conf  reference.out  reference.peg  sequence.conf  sequence.out  sequence.peg  string.conf  string.out  string.peg  term.conf  term.out  term.peg
tests/groups.d/: groups.conf  groups.out  groups.peg
tests/import.d/: format.conf  format.out  import.conf  import.out  import.peg  import1.peg  noimport.conf  noimport.out  setup.sh
tests/inlining.d/: complex.conf  complex.out  complex.peg  inline.conf  inline.out  inline.peg  limit.peg  limit1.conf  limit1.out  limit2.conf  limit2.out  recursion.conf  recursion.out  recursion.peg  repeated.conf  (+2 more)
web/: glue.js  index.html  pegof.css  simple.peg
(+74 files in other folders)
